# telemetry-server

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
docs/specifications/: telemetry_server_v1_0_0_tech_spec.md
examples/: api_usage.sh
scripts/: build.sh  check-ports.sh  clean.sh  health-check.sh  lint.sh  publish.sh  run-tests-alt-ports.sh  run-tests.sh  start-local-services-alt-ports.sh  start-local-services.sh  stop-local-services.sh  test.sh
src/: config.rs  lib.rs  main.rs
src/db/: mod.rs  mongo.rs  redis.rs
src/models/: metric.rs  mod.rs  query.rs
src/routes/: metrics.rs  mod.rs  query.rs
src/services/: mod.rs  query_service.rs  telemetry_service.rs
tests/: api_tests.rs  integration_tests.rs
