[package]
name = "telemetry-server"
version = "0.0.1"
edition = "2021"
description = "A simple telemetry server for performance and scale."
authors = ["Aditya Patange (AdiPat) <contact.adityapatange@gmail.com>"]
license = "MIT"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"

[dev-dependencies]
actix-rt = "2.9"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
chrono = "0.4" 