[package]
name = "telemetry-server"
version = "0.0.1"
edition = "2021"
description = "A simple telemetry server for performance and scale."
authors = ["Aditya Patange (AdiPat) <contact.adityapatange@gmail.com>"]
license = "MIT"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
mongodb = "2.8"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
bson = { version = "2.9", features = ["chrono-0_4"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
regex = "1.10"
actix-governor = "0.5"

[dev-dependencies]
actix-rt = "2.9"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
chrono = "0.4" 